# cinematch

./: .env.example  .gitignore  API_USAGE.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  docker-compose.yml
.agent/skills/nextjs-best-practices/: SKILL.md
.github/workflows/: backend.yml  cleanup-pr-images.yml  docker-backend.yml  docker-frontend.yml  nextjs-quality-check.yml
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml
backend/cinematch-abi/: Cargo.toml  README.md
backend/cinematch-abi/src/: lib.rs  prelude.rs
backend/cinematch-abi/src/auth/: jwt.rs
backend/cinematch-abi/src/domain/: auth.rs  error.rs  mod.rs  onboarding.rs  recommendation.rs  user.rs
backend/cinematch-abi/src/domain/party/: crud.rs  mod.rs  state_machine.rs  utils.rs  validation.rs
backend/cinematch-abi/src/scheduler/: executor.rs  mod.rs  startup.rs
backend/cinematch-abi/src/websocket/: mod.rs  session.rs
backend/cinematch-api/: Cargo.toml
backend/cinematch-api/src/: lib.rs  routes.rs
backend/cinematch-api/src/handler/: mod.rs  party.rs
backend/cinematch-api/src/movie/: handlers.rs  mod.rs
backend/cinematch-api/src/party/: crud.rs  leader_ops.rs  mod.rs  picks.rs  user_ops.rs  votes.rs
backend/cinematch-api/src/user/: handlers.rs  mod.rs  pref.rs
backend/cinematch-api/src/websocket/: mod.rs  models.rs
backend/cinematch-common/: Cargo.toml  README.md
backend/cinematch-common/src/: config.rs  lib.rs  models.rs  vote_store.rs
backend/cinematch-common/src/models/: mod.rs  movie.rs
backend/cinematch-common/src/models/websocket/: client.rs  server.rs
backend/cinematch-db/: Cargo.toml  README.md
backend/cinematch-db/migrations/2026-01-20-212701-0000_party/: down.sql  up.sql
backend/cinematch-db/migrations/2026-01-24-190811-0000_vector-movies/: down.sql  up.sql
backend/cinematch-db/migrations/2026-01-25-152241-0000_movie-work/: down.sql  up.sql
backend/cinematch-db/migrations/2026-01-25-184220-0000_votes/: down.sql  up.sql
backend/cinematch-db/migrations/2026-01-26-010650-0000_voting-round/: down.sql  up.sql
backend/cinematch-db/migrations/2026-01-26-014742-0000_phase-entered-at/: down.sql  up.sql
backend/cinematch-db/migrations/2026-01-26-195131-0000_skip-pick/: down.sql  up.sql
backend/cinematch-db/migrations/2026-02-03-003834-0000_scheduler/: down.sql  up.sql
backend/cinematch-db/migrations/2026-02-14-155439-0000_reviews/: down.sql  up.sql
backend/cinematch-db/migrations/2026-02-15-002234-0000_onboarding/: down.sql  up.sql
backend/cinematch-db/src/: external_account.rs  lib.rs  models.rs  party.rs  prelude.rs  schema.rs  taste.rs  user.rs
backend/cinematch-db/src/conn/: mod.rs
backend/cinematch-db/src/conn/postgres/: mod.rs
backend/cinematch-db/src/conn/qdrant/: client.rs  import.rs  mod.rs
backend/cinematch-db/src/conn/redis/: cache.rs  mod.rs
backend/cinematch-db/src/domain/: member.rs  mod.rs  movie.rs  party.rs  preferences.rs  user.rs
backend/cinematch-db/src/movie/: genres.rs  insert.rs  mod.rs
backend/cinematch-db/src/repo/: mod.rs
backend/cinematch-db/src/repo/movie/: insert.rs  mod.rs  models.rs
backend/cinematch-db/src/repo/onboarding/: mod.rs  models.rs
backend/cinematch-db/src/repo/party/: mod.rs  models.rs  ops.rs
backend/cinematch-db/src/repo/schedules/: mod.rs  models.rs  ops.rs
backend/cinematch-db/src/repo/taste/: mod.rs
backend/cinematch-db/src/repo/user/: crud.rs  external_account.rs  mod.rs  models.rs  prefs.rs
backend/cinematch-db/src/repo/vote/: mod.rs  models.rs  votes.rs
backend/cinematch-db/src/user/: crud.rs  mod.rs  prefs.rs
backend/cinematch-db/src/vector/: deserializer.rs  import.rs  mod.rs  models.rs  qdrant.rs  taste.rs
backend/cinematch-db/src/vote/: votes.rs
backend/cinematch-importer/: Cargo.toml  README.md
backend/cinematch-importer/src/: cli.rs  csv_loader.rs  deserializer.rs  main.rs  ollama.rs
backend/cinematch-importer/src/commands/: mod.rs  remove_all.rs  update_movies.rs  update_onboarding.rs  update_ratings.rs
backend/cinematch-importer/src/parsing/: deserializer.rs  mod.rs  pylit.rs
backend/cinematch-importer/src/utils/: stats.rs
backend/cinematch-party-api/: Cargo.toml
backend/cinematch-party-api/src/: handlers.rs  lib.rs  models.rs  routes.rs
backend/cinematch-recommendation-engine/: Cargo.toml  README.md
backend/cinematch-recommendation-engine/src/: lib.rs  onboarding.rs  utils.rs
backend/cinematch-recommendation-engine/src/ballots/: mod.rs  v1.rs  v2.rs
backend/cinematch-recommendation-engine/src/engine/: mod.rs  pool.rs  reviews.rs  standard.rs
backend/cinematch-server/: Cargo.toml  README.md  build.rs
backend/cinematch-server/src/: api_error.rs  lib.rs  main.rs  routes.rs  websocket.rs
backend/cinematch-server/src/auth/: github.rs  guard.rs  handlers.rs  mod.rs
backend/cinematch-server/src/handler/: mod.rs  party.rs
backend/cinematch-server/src/handlers/: version.rs
backend/cinematch-server/src/movie/: handlers.rs  mod.rs
backend/cinematch-server/src/onboarding/: mod.rs
backend/cinematch-server/src/party/: crud.rs  leader_ops.rs  mod.rs  picks.rs  user_ops.rs  votes.rs
backend/cinematch-server/src/recommendation/: handlers.rs
backend/cinematch-server/src/user/: handlers.rs  mod.rs  pref.rs
backend/cinematch-server/src/websocket/: mod.rs  models.rs
backend/cinematch-user-api/: Cargo.toml
backend/cinematch-user-api/src/: handlers.rs  lib.rs  models.rs  routes.rs
backend/cinematch-websockets/: Cargo.toml
docs/: ARCHITECTURE.md  BACKEND.md  DATABASE.md  DEPLOYMENT.md  FRONTEND.md  GETTING_STARTED.md  README.md  RECOMMENDATION_ENGINE.md  WEBSOCKET.md
frontend/: .env.example  .prettierignore  README.md  migration.md  next.config.ts  openapi.json  orval.config.js  package-lock.json  package.json  pnpm-lock.yaml
frontend/public/: manifest.json
frontend/src/actions/: dashboard.ts  movie-actions.ts  onboarding.ts  party-room.ts  user-actions.ts  user.ts
frontend/src/app/: actions.ts  layout.tsx  manifest.tsx  page.tsx
frontend/src/hooks/: useParty.ts  (+9 more)
(+148 files in other folders)
