[workspace]
resolver = "3"
members = [
    "backend/cinematch-server",
    "backend/cinematch-party-api",
    "backend/cinematch-db",
    "backend/cinematch-recommendation-engine",
    "backend/cinematch-user-api",
    "backend/cinematch-common", "backend/cinematch-websockets"]
default-members = [
    "backend/cinematch-server",
]
