[workspace]
resolver = "3"
members = [
    "cinematch-server",
    "cinematch-db",
    "cinematch-recommendation-engine",
    "cinematch-common",
    "cinematch-importer",
    "cinematch-abi",
]
default-members = ["cinematch-server"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Pekka Marttila"]
license = "GPL-3.0-or-later"
description = ""

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async / runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Actix ecosystem
actix = "0.13"
actix-web = "4"
actix-cors = "0.7"
actix-web-actors = "4.3.0"
actix-identity = "0.9.0"
actix-session = { version = "0.11", features = [
    "redis-pool",
    "redis-session-rustls",
] }
actix-web-httpauth = "0.8"

# API docs
utoipa = { version = "5.4", features = ["chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
utoipa-actix-web = "0.1.2"
utoipa-rapidoc = { version = "6.0.0", features = ["actix-web"] }
utoipa-redoc = { version = "6.0.0", features = ["actix-web"] }
utoipa-scalar = { version = "0.3.0", features = ["actix-web"] }

# Common utilities
uuid = { version = "1.20", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.10"
log = "0.4"
env_logger = "0.11.0"
thiserror = "2.0"
anyhow = "1.0"

# Redis / Qdrant
redis = "1"
deadpool-redis = "0.23"
qdrant-client = "1.16.0"
linfa = "0.8"
linfa-clustering = "0.8 "
linfa-nn = "0.8"
linfa-linalg = "0.2"
ndarray = "0.17"
rayon = "1.10"
rand_distr = "0.6"
octocrab = { version = "0.49", features = ["rustls", "rustls-webpki-tokio"] }
secrecy = "0.10"
jsonwebtoken = "10.3"

# Local crates
cinematch-db = { path = "cinematch-db" }
cinematch-common = { path = "cinematch-common" }
cinematch-abi = { path = "cinematch-abi" }
cinematch-recommendation-engine = { path = "cinematch-recommendation-engine" }
