[package]
name = "cinematch-common"
version = "0.1.0"
edition = "2024"

[dependencies]
utoipa = { version = "5.4", features = ["chrono", "uuid"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
actix-web = "4"
chrono = { version = "0.4", features = ["serde"] }