[package]
name = "cinematch-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
utoipa.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
actix-web.workspace = true
chrono.workspace = true
octocrab.workspace = true
log.workspace = true
secrecy.workspace = true
