[package]
name = "cinematch-db"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utoipa = { version = "5.4", features = ["chrono", "uuid"] }
diesel = { version = "2.2.0", features = ["chrono", "uuid", "postgres"] }
diesel-async = { version = "0.7", features = ["postgres", "deadpool"] }
diesel_migrations = { version = "2.3", features = ["postgres"] }
diesel-derive-enum = { version = "2.1", features = ["postgres"] }
futures-util = { version = "0.3", features = ["std"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
rand = "0.9"
log = "0.4"

qdrant-client = "1.16.0"

pq-sys = { version = "0.7", features = ["bundled"] }
