[package]
name = "cinematch-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
utoipa.workspace = true
diesel = { version = "2.2.0", features = [
    "chrono",
    "uuid",
    "postgres",
    "serde_json",
] }
diesel-async = { version = "0.7", features = ["postgres", "deadpool"] }
diesel_migrations = { version = "2.3", features = ["postgres"] }
diesel-derive-enum = { version = "2.1", features = ["postgres"] }
futures-util = { version = "0.3", features = ["std"] }
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
rand.workspace = true
log.workspace = true

qdrant-client.workspace = true
deadpool-redis = { workspace = true, features = ["rt_tokio_1"] }

pq-sys = { version = "0.7", features = ["bundled"] }


cinematch-common.workspace = true
