[package]
name = "cinematch-importer"
version = "0.1.0"
edition = "2024"

[dependencies]
polars = { version = "0.52", features = ["parquet", "csv"] }
csv = "1.3"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
indicatif = "0.18"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"

py_literal = "0.4"

qdrant-client = "1.10"
ollama-rs = "0.3.3"

cinematch-db = { path = "../cinematch-db" }