[package]
name = "cinematch-importer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
csv = "1.3"
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
indicatif = "0.18"
tokio.workspace = true
log.workspace = true
env_logger.workspace = true
chrono.workspace = true
clap = { version = "4", features = ["derive"] }

ollama-rs = "0.3.3"

linfa.workspace = true
linfa-clustering.workspace = true
linfa-nn.workspace = true
linfa-linalg.workspace = true
ndarray.workspace = true
rand = { workspace = true, features = ["std", "std_rng"] }
rand_distr.workspace = true
rayon.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }

cinematch-recommendation-engine.workspace = true
cinematch-db.workspace = true
diesel = { version = "2.2.0", features = [
    "postgres",
    "chrono",
    "uuid",
    "serde_json",
] }
diesel-async = { version = "0.7", features = ["postgres"] }
