[package]
name = "cinematch-recommendation-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
cinematch-common.workspace = true
cinematch-db.workspace = true
serde.workspace = true
rand.workspace = true
uuid.workspace = true
qdrant-client.workspace = true
log.workspace = true
rayon = "1.10"
