[package]
name = "cinematch-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.7"

tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11.0"
log = "0.4"
dotenvy = "0.15"
futures = "0.3"

utoipa = { version = "5.4", features = ["chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
utoipa-actix-web = "0.1.2"

uuid = { version = "1.6", features = ["v4", "serde"] }
rand = "0.9"
chrono = { version = "0.4", features = ["serde"] }

deadpool-redis = "0.22.1"

actix-identity = "0.9.0"
actix-session = { version = "0.11", features = ["redis-pool", "redis-session-rustls"] }

# Local crates
cinematch-db = { path = "../cinematch-db" }
cinematch-party-api = { path = "../cinematch-party-api" }
cinematch-user-api = { path = "../cinematch-user-api" }
cinematch-recommendation-engine = { path = "../cinematch-recommendation-engine" }



