[package]
name = "cinematch-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
actix-web.workspace = true
actix-cors.workspace = true

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
env_logger.workspace = true
log.workspace = true
dotenvy = "0.15"
thiserror = "2.0"
futures.workspace = true

utoipa = { workspace = true, features = ["actix_extras"] }
utoipa-swagger-ui.workspace = true
utoipa-actix-web.workspace = true

utoipa-rapidoc.workspace = true
utoipa-redoc.workspace = true
utoipa-scalar.workspace = true


uuid.workspace = true
rand.workspace = true
chrono.workspace = true

deadpool-redis.workspace = true

actix-identity.workspace = true
actix-session.workspace = true

actix.workspace = true
actix-web-actors.workspace = true
octocrab.workspace = true
secrecy.workspace = true

# Local crates
cinematch-db.workspace = true
cinematch-abi.workspace = true
cinematch-recommendation-engine.workspace = true
cinematch-common.workspace = true
