[package]
name = "cinematch-user-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11.0"
log = "0.4"
futures = "0.3"
uuid = { version = "1.6", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

utoipa = { version = "5.4", features = ["chrono", "uuid"] }
utoipa-swagger-ui = "9.0.2"
utoipa-actix-web = "0.1.2"

actix-jwt-auth-middleware = "0.5.0"
ed25519-compact = "2.2.0"
jwt-compact = { version = "0.8.0", features = ["ed25519-compact"] }

rand = "0.9"
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
ulid = { version = "1.1", features = ["serde"] }

cinematch-db = { path = "../cinematch-db" }
cinematch-common = { path = "../cinematch-common" }